--- a/.config
+++ b/.config
@@ -1362,7 +1362,7 @@ CONFIG_BUSYBOX_DEFAULT_IP=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ADDRESS=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_LINK=y
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE=y
-CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE_DIR="/etc/iproute2"
+CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_ROUTE_DIR is not set
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_TUNNEL is not set
 CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_RULE=y
 # CONFIG_BUSYBOX_DEFAULT_FEATURE_IP_NEIGH is not set
@@ -2204,7 +2204,7 @@ CONFIG_PACKAGE_kmod-mpls=m
 CONFIG_PACKAGE_kmod-nat46=m
 CONFIG_PACKAGE_kmod-netem=m
 CONFIG_PACKAGE_kmod-nlmon=m
-CONFIG_PACKAGE_kmod-openvswitch=m
+CONFIG_PACKAGE_kmod-openvswitch=n
 CONFIG_PACKAGE_kmod-ppp=y
 CONFIG_PACKAGE_kmod-mppe=m
 CONFIG_PACKAGE_kmod-pktgen=m
