--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -35,8 +35,8 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
-
+#    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout
       uses: actions/checkout@main
