--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -24,7 +24,7 @@ env:
   REPO_BRANCH: lede-17.01
   REPO_TAG: v17.01.7
   FEEDS_CONF: feeds.conf.default
-  CONFIG_FILE: config_wr720n_v3_0509
+  CONFIG_FILE: diff_config_wr720n_v3_0511
   DIY_P1_SH: diy-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
